--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -9,25 +9,33 @@
             <div class="education-box">
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
-                        <h3>Mater dagree - University</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                        <div class="years"><i class='bx bxs-calendar'></i> Jun 2021 - Ago 2023 (Prontamente)</div>
+                        <h3>Tégnologo Analisis de Sistemas de Información - SENA</h3>
+                        <p>Graduado en la ciudad de Neiva, aplicar mis habilidades y conocimientos en proyectos de análisis de sistemas de información, aportando soluciones innovadoras y modelado de datos en mejora de procesos. </p>
                     </div>
                 </div>
 
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
-                        <h3>Mater dagree - University</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                        <div class="years"><i class='bx bxs-calendar'></i> Abril 2021 - Mayo 2022</div>
+                        <h3>Técnico Analisis de Sistemas - Confamiliar</h3>
+                        <p>Graduado en la ciudad de Neiva, Conocimientos sólidos en la identificación de requerimientos y la mejora de procesos. Habilidad para trabajar de manera analítica y resolver problemas complejos.</p>
                     </div>
                 </div>
 
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
-                        <h3>Mater dagree - University</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                        <div class="years"><i class='bx bxs-calendar'></i> Feb 2021 - Dic 2021</div>
+                        <h3>Técnico Programación Software - UNAB</h3>
+                        <p>Graduado en la ciudad de Bucaramanga, durante el proceso se fueron construyeron los conocimientos básicos de la programación desarrollando capacidades de trabajo en equipo y resolver problema. </p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> 2007 - 2010</div>
+                        <h3>Técnico Diseño Gráfico - Computec</h3>
+                        <p>Graduado en la ciudad de Medellín, con habilidades creativas en piezas publicitarias en un entorno profesional, donde se destacó los conocimientos en innovación y compromiso de cada proyecto. </p>
                     </div>
                 </div>
 
@@ -41,25 +49,33 @@
             <div class="education-box">
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
-                        <h3>Web developer - Company</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                        <div class="years"><i class='bx bxs-calendar'></i> Feb 2023 - (Actualmente)</div>
+                        <h3>Desarrollo Frontend - Zona Logística</h3>
+                        <p>Creación de interfaces de usuario atractivas y funcionales. Con conocimientos en HTML, CSS y JavaScript, así como frameworks modernos como Angular. Capacidad de hacer diseños y especificaciones en código limpio y eficiente. </p>
                     </div>
                 </div>
 
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
-                        <h3>Web developer - Company</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                        <div class="years"><i class='bx bxs-calendar'></i> Oct 2022 - Feb 2023</div>
+                        <h3>Analista de Sistemas - Marketting</h3>
+                        <p>Realicé la creación de herramientas de captura utilizando el software GANDIA. Además de la implementación de cargue de bases de datos en Excel para su análisis operativo. Llevé a cabo la limpieza y organización de los datos en las bases de Excel.</p>
                     </div>
                 </div>
 
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> 2023 - 2022</div>
-                        <h3>Web developer - Company</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, veritatis porro? Blanditiis molestiae tempore, a provident voluptatem pariatur nulla consequatur expedita ipsa numquam sit doloremque molestias debitis enim quo corporis.</p>
+                        <div class="years"><i class='bx bxs-calendar'></i> Dic 2021 - Feb 2022</div>
+                        <h3>Desarrollador - Comfamiliar Huila</h3>
+                        <p>Realicé el análisis y documentación de una aplicación web para un gimnasio en de la empresa, utilizando el lenguaje Python. Brindé atención y soporte a los requerimientos del cliente, logrando el objetivo de la administración de los funcionarios.</p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+                    <div class="content">
+                        <div class="years"><i class='bx bxs-calendar'></i> Ene 2019 - Ago 2019</div>
+                        <h3>Diseñador Grafico - RGB Litografía</h3>
+                        <p>Desarrollé habilidades en la creación de técnicas de expresión gráfica utilizando software de diseño. Utilicé el análisis y la escucha activa con el cliente para diseñar soluciones visuales óptimas para sus necesidades publicitarias.</p>
                     </div>
                 </div>
 
