--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -82,6 +82,7 @@
 
 .home-sci a {
     position: relative;
+    text-decoration: none;
     display: inline-flex;
     justify-content: center;
     align-items: center;
