--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <nav class="navbar">
         <a routerLink="/home" routerLinkActive="active" class="selection">Inicio</a>
         <a routerLink="/about" routerLinkActive="active" class="selection_2">Perfil</a>
-        <a routerLink="/education" routerLinkActive="active" class="selection_3">Educación</a>
+        <a routerLink="/education" routerLinkActive="active" class="selection_3">Experiencia</a>
         <a routerLink="/skills" routerLinkActive="active" class="selection_4">Habilidades</a>
         <a routerLink="/projects" routerLinkActive="active" class="selection_5">Proyectos</a>
 
