--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,12 +1,12 @@
 <section class="about">
     <h2 class="heading">Acerca de <span>Mi</span></h2>
     <div class="about-img">
-        <img src="" alt="">
+        <img src="../../../assets/Cyberpunk_foto.jpg" alt="foto_perfil">
         <span class="circle-spin"></span>
     </div>
     <div class="about-content">
         <h3>Frontend Developer! </h3>
-        <p>Técnico en análisis de sistemas y diseñador gráfico con 2 años de experiencia como desarrollador Frontend. Especializado en diseño y desarrollo web, con habilidades en publicidad, branding y publicidad. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
+        <p>Técnico en análisis de sistemas y diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño y desarrollo web, con habilidades en publicidad, branding y publicidad. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
 
         <div class="btn-box btns">
             <a href="#" class="btn">Ver más</a>
