--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -6,7 +6,7 @@
         <div class="projec-column">
             <div class="card">
                 <div class="face front">
-                    <img src="./assets/foto.jpg" alt="Proeycto 1">
+                    <img src="../../../assets/Photo_Img.png" alt="Proeycto 1">
                     <h3>Ecommerce</h3>
                 </div>
                 <div class="face back">
@@ -25,7 +25,7 @@
         <div class="projec-column">
             <div class="card">
                 <div class="face front">
-                    <img src="./assets/foto.jpg" alt="Proeycto 1">
+                    <img src="../../../assets/Photo_Img.png" alt="Proeycto 1">
                     <h3>API Pokemon</h3>
                 </div>
                 <div class="face back">
@@ -44,7 +44,7 @@
         <div class="projec-column">
             <div class="card">
                 <div class="face front">
-                    <img src="./assets/foto.jpg" alt="Proeycto 1">
+                    <img src="../../../assets/Photo_Img.png" alt="Proeycto 1">
                     <h3>CRUD</h3>
                 </div>
                 <div class="face back">
