--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -4,6 +4,10 @@
     align-items: center;
     flex-direction: column;
     padding-bottom: 5rem;
+    background-image: url(../../../assets/fondo_habilidades.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .education .education-row {
