--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -3,6 +3,10 @@
     align-items: center;
     flex-direction: column;
     padding-bottom: 5rem;
+    background-image: url(../../../assets/fondo_proyecto.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .heading_2 {
