--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -14,17 +14,17 @@
                     </div>
 
                     <div class="progress">
-                        <h3>CSS <span>75%</span></h3>
+                        <h3>CSS / SASS <span>80%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Python <span>40%</span></h3>
+                        <h3>Python<span>40%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Angular <span>60%</span></h3>
+                        <h3>Angular / Ionic <span>75%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="progress">
-                        <h3>Bases Datos <span>35%</span></h3>
+                        <h3>Bases Datos <span>45%</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
