--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,9 +2,7 @@
     display: flex;
     align-items: center;
     padding: 0 9%;
-    /* background: url('');
-    background-size: cover;
-    background-position: center; */
+    background-color: #070c10;
 }
 
 .home-content {
@@ -135,20 +133,23 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 45%;
+    width: 50%;
     height: 95%;
-    background: transparent;
-/*     border: 2px solid red; */
-    transition: 3s;
-    -webkit-transition: 3s;
-    -moz-transition: 3s;
-    -ms-transition: 3s;
-    -o-transition: 3s;
+    background-image: url(../../../assets/fondo_home.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 2s;
+    -webkit-transition: 2s;
+    -moz-transition: 2s;
+    -ms-transition: 2s;
+    -o-transition: 2s;
 }
 
 .home-imgHover:hover {
-    background: var(--bg-color);
-    opacity: .8;
+    /*opacity: .4;*/
+    
+    filter: grayscale(80%);
+    -webkit-filter: grayscale(80%);
 }
 
 //********************Animacion de Redload************************/
@@ -159,7 +160,7 @@
     right: 0;
     width: 100%;
     height: 100%;
-    background: var(--bg-color);
+    background: #070c10;
     z-index: 98;
 }
 
