solucion de la media query pantalla 1030px

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -177,12 +177,19 @@
 
 //*****************BreakPoints**************************//
 
+@media (max-width: 1030px) {
+    
+    .home-imgHover {
+        pointer-events: none;
+        opacity: .10;
+    }
+}
+
 @media (max-width: 768px) {
     
     .home-imgHover {
         pointer-events: none;
-        background: var(--bg-color);
-        opacity: .6;
+        opacity: .10;
     }
 }
 
