Cambios de Stilos

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -9,7 +9,7 @@
             <div class="education-box">
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> Jun 2021 - Ago 2023 (Prontamente)</div>
+                        <div class="years"><i class='bx bxs-calendar'></i> Jun 2021 - Ago 2023</div>
                         <h3>Tégnologo Analisis de Sistemas de Información - SENA</h3>
                         <p>Graduado en la ciudad de Neiva, aplicar mis habilidades y conocimientos en proyectos de análisis de sistemas de información, aportando soluciones innovadoras y modelado de datos en mejora de procesos. </p>
                     </div>
