--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,8 +5,8 @@
         <span class="circle-spin"></span>
     </div>
     <div class="about-content">
-        <h3>Frontend Developer! </h3>
-        <p>Técnico en análisis de sistemas y diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño y desarrollo web, con habilidades en publicidad, branding y publicidad. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
+        <h3>Frontend Developer </h3>
+        <p>Técnologo en análisis de sistemas de información y Diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño web y desarrollo web, con habilidades en digitales, branding y publicidad entre otras. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
 
         <div class="btn-box btns">
             <a href="#" class="btn">Ver más</a>
