--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -42,7 +42,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: var(--bg-color);
+    background: #000815;
     z-index: -1;
     transition: .5s;
     -webkit-transition: .5s;
