Creacion del Perfil

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,7 @@
     <button class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></button>
 
     <nav class="navbar">
+        <!-- Los selection no son clases de CSS sino que es una funcion en el typeScript para que se cierren cuando estan responsive en el mobile -->
         <a routerLink="/home" routerLinkActive="active" class="selection">Inicio</a>
         <a routerLink="/about" routerLinkActive="active" class="selection_2">Perfil</a>
         <a routerLink="/education" routerLinkActive="active" class="selection_3">Experiencia</a>
