--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <section class="about">
     <h2 class="heading">Acerca de <span>Mi</span></h2>
     <div class="about-img">
-        <img src="../../../assets/Cyberpunk_foto.jpg" alt="foto_perfil">
+        <img src="../../../assets/AboutMe.png" alt="foto_perfil">
         <span class="circle-spin"></span>
     </div>
     <div class="about-content">
@@ -9,7 +9,7 @@
         <p>Técnologo en análisis de sistemas de información y Diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño web y desarrollo web, con habilidades en digitales, branding y publicidad entre otras. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
 
         <div class="btn-box btns">
-            <a href="#" class="btn">Ver más</a>
+            <a routerLink="/perfil" routerLinkActive="active" class="btn">Ver más</a>
         </div>
     </div>
 </section>
