Barra de Progreso

--- a/src/app/components/about-perfil/about-perfil.component.html
+++ b/src/app/components/about-perfil/about-perfil.component.html
@@ -1,24 +1,71 @@
 <section class="aboutPerfil">
     <h2 class="heading">Per<span>fil</span></h2>
+
     <div class="aboutPerfil-contents">
+        
+        <!-- Seccion de la Foto personal -->
         <div class="aboutPerfil-img">
             <img src="../../../assets/Cyberpunk_foto.jpg" alt="foto_perfil">
         </div>
 
+        <!-- Container General -->
         <div class="aboutPerfil-info">
             <h1>Frontend Developer</h1>
             <h3>Profecional Diseñador Web</h3>
             <p>Técnologo en análisis de sistemas de información y Diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño web y desarrollo web, con habilidades en digitales, branding y publicidad entre otras. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fuga in suscipit impedit ipsum accusantium voluptatem maxime ea, dolorem, ipsam cupiditate, alias tempore recusandae modi consequatur voluptas pariatur deserunt quos.</p>
 
+            <!-- Seccion pequeña de idiomas  -->
             <div class="aboutPerfil-personal">
-                <div><span>Nombre:</span> <span>Prueba nombres</span></div>
-                <div><span>Nombre:</span> <span>Prueba nombres</span></div>
-                <div><span>Nombre:</span> <span>Prueba nombres</span></div>
-                <div><span>Nombre:</span> <span>Prueba nombres</span></div>
+                <div><span>Nombre: Prueba nombres</span> </div>
+                <div><span>Nombre: Prueba nombres</span> </div>
+                <div><span>Nombre: Prueba nombres</span> </div>
+                <div><span>Nombre: Prueba nombres</span> </div>
+            </div>
+
+            <!-- Seccion de habilidades -->
+            <div class="aboutPerfil-contenedorSkill">
+                <h1>Mis habilidades Blandas</h1>
+    
+                <div class="skills">
+                    <div class="text-progress">
+                        <h3>Trabajo en Equipo</h3>
+                    </div>    
+                    <div class="linea-progress">
+                        <div id="habilidad_1"></div>
+                    </div>
+                </div>
+    
+                <div class="skills">
+                    <div class="text-progress">
+                        <h3>Resilencia</h3>
+                    </div>    
+                    <div class="linea-progress">
+                        <div id="habilidad_2"></div>
+                    </div>
+                </div>
+    
+                <div class="skills">
+                    <div class="text-progress">
+                        <h3>Adaptabilidad</h3>
+                    </div>    
+                    <div class="linea-progress">
+                        <div id="habilidad_3"></div>
+                    </div>
+                </div>
+    
+                <div class="skills">
+                    <div class="text-progress">
+                        <h3>Liderazgo</h3>
+                    </div>    
+                    <div class="linea-progress">
+                        <div id="habilidad_4"></div>
+                    </div>
+                </div>
+                
             </div>
         </div>
-    </div>
+    </div>   
 
     
 </section>
