--- a/src/app/components/about-perfil/about-perfil.component.scss
+++ b/src/app/components/about-perfil/about-perfil.component.scss
@@ -9,20 +9,19 @@
     background-position: center;
     background-size: cover;
     backdrop-filter: blur(10px);
-    padding-bottom: 6rem;
-}
-
-.aboutPerfil-contents {
-    display: grid;
-    grid-template-columns: 2fr 5fr;
-    gap: 70px;
 }
 
 // Seccion de Imagen
+.aboutPerfil-contents {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    gap: 70px;
+}
+
 .aboutPerfil-contents .aboutPerfil-img {
     position: relative;
     min-width: 30rem;
-    height: 38rem;
+    height: 35rem;
 }
 
 .aboutPerfil-img img {
@@ -42,6 +41,7 @@
     top: 15px;
     left: 15px;
     z-index: 1;
+    background-color: var(--bg-color);
 }
 
 .aboutPerfil-info h1 {
@@ -63,5 +63,119 @@
 }
 
 .aboutPerfil-info h1::after {
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 4px;
+    top: calc(100% - 1px);
+    left: 0;
+    background-color: var(--text-color);
+}
+
+.aboutPerfil-info h3 {
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 1rem 0 1.5rem;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+}
+
+.aboutPerfil-info p {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    text-align: justify;
+    padding-bottom: 0.8rem;
+}
+
+.aboutPerfil-info .aboutPerfil-personal {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem 2rem;
+    margin-top: 1.4rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid var(--text-color);
+}
+
+.aboutPerfil-personal div {
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+// Seccion de habilidades Blandas con barras de progresos
+.aboutPerfil-contenedorSkill {
+    width: 100%;
+    padding: 10px 0;
+}
+
+.skills {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 2rem;
+    margin-top: 1.4rem;
+    border-bottom: 2px solid var(--text-color);
+}
+
+.linea-progress {
+    position: relative;
+    border: 1px solid var(--main-color);
+    border-radius: 3rem;
+    height: 1.5rem;
+    margin-top: 2rem;
+    background-color: var(--bg-color);
+}
+
+.linea-progress div {
+    position: relative;
+    width: 0;
+    border-radius: 3rem;
+    background-color: var(--main-color);
+    height: 1.5rem;    
+}
+
+/* *** Animacion *** */
+
+#habilidad_1 {
+    animation: habilidad_1 3s forwards;
+}
+
+@keyframes habilidad_1 {
+    100% {
+        width: 90%;
+    }
+}
+
+#habilidad_2 {
+    animation: habilidad_2 3s forwards;
+}
+
+@keyframes habilidad_2 {
+    100% {
+        width: 80%;
+    }
+}
+
+#habilidad_3 {
+    animation: habilidad_3 3s forwards;
+}
+
+@keyframes habilidad_3 {
+    100% {
+        width: 85%;
+    }
+}
+
+#habilidad_4 {
+    animation: habilidad_4 3s forwards;
+}
+
+@keyframes habilidad_4 {
+    100% {
+        width: 75%;
+    }
+}
+
+//*****************BreakPoints**************************//
+
+@media screen {
     
 }
