Ajuste de perfil

--- a/src/app/components/about-perfil/about-perfil.component.html
+++ b/src/app/components/about-perfil/about-perfil.component.html
@@ -1,5 +1,9 @@
 <section class="aboutPerfil">
-    <h2 class="heading">Per<span>fil</span></h2>
+    <div class="perfilTitle">
+        <a routerLink="../about"><i class='bx bx-arrow-back'></i></a>
+        <h2 class="heading">Sobre <span>Mi</span></h2>
+    </div>
+    
 
     <div class="aboutPerfil-contents">
         
@@ -10,17 +14,19 @@
 
         <!-- Container General -->
         <div class="aboutPerfil-info">
-            <h1>Frontend Developer</h1>
-            <h3>Profecional Diseñador Web</h3>
-            <p>Técnologo en análisis de sistemas de información y Diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño web y desarrollo web, con habilidades en digitales, branding y publicidad entre otras. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fuga in suscipit impedit ipsum accusantium voluptatem maxime ea, dolorem, ipsam cupiditate, alias tempore recusandae modi consequatur voluptas pariatur deserunt quos.</p>
+            <h1>Developer Web</h1>
+            <h3>Profecional Front-end Web</h3>
+            <p>Egresado del SENA, soy un profesional apasionado y comprometido con la convergencia de diseño y tecnología. Mi experiencia como Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, junto con un año de experiencia en desarrollo Frontend, me han proporcionado una base sólida para abordar proyectos de manera integral. Mi enfoque en el trabajo en equipo, la adaptabilidad y la resolución de problemas me permite enfrentar desafíos con confianza y entregar resultados de alta calidad en cada paso del camino.</p>
+            <div class="aboutPerfil-idioma">
+                <h3>Idioma: <span>Ingles-B1</span> </h3>
+            </div> 
 
             <!-- Seccion pequeña de idiomas  -->
             <div class="aboutPerfil-personal">
-                <div><span>Nombre: Prueba nombres</span> </div>
-                <div><span>Nombre: Prueba nombres</span> </div>
-                <div><span>Nombre: Prueba nombres</span> </div>
-                <div><span>Nombre: Prueba nombres</span> </div>
+                <div><span><span class="title">Diplomado: </span> Scrum Master</span> </div>
+                <div><span><span class="title">Diplomado: </span> Ofimatica Avanzada</span> </div>
+                <div><span><span class="title">Diplomado: </span> Software Siigo</span> </div>
+                <div><span><span class="title">Diplomado: </span> Ilustración de Personajes</span> </div>
             </div>
 
             <!-- Seccion de habilidades -->
