--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,12 +1,12 @@
 <section class="about">
-    <h2 class="heading">Acerca de <span>Mi</span></h2>
+    <h2 class="heading">Per<span>fil</span></h2>
     <div class="about-img">
         <img src="../../../assets/AboutMe.png" alt="foto_perfil">
         <span class="circle-spin"></span>
     </div>
     <div class="about-content">
         <h3>Frontend Developer </h3>
-        <p>Técnologo en análisis de sistemas de información y Diseñador gráfico con 1 año de experiencia como desarrollador Frontend. Especializado en diseño web y desarrollo web, con habilidades en digitales, branding y publicidad entre otras. Destacado por trabajo en equipo, adaptabilidad y resolución de problemas. Comprometido con los clientes y usuarios en la entrega de resultados de cada meta solicitada.</p>
+        <p>Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, con un toque de creatividad y un año de experiencia en desarrollo Frontend. Mi mundo gira en torno al diseño web y al desarrollo, donde combino lo visual con lo técnico para conectar con las necesidades de mis clientes y usuarios. </p>
 
         <div class="btn-box btns">
             <a routerLink="/perfil" routerLinkActive="active" class="btn">Ver más</a>
