--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -58,7 +58,7 @@
                 <div class="education-content">
                     <div class="content">
                         <div class="years"><i class='bx bxs-calendar'></i> Oct 2022 - Feb 2023</div>
-                        <h3>Analista de Sistemas - Marketting</h3>
+                        <h3>Analista de Sistemas - Market Team</h3>
                         <p>Realicé la creación de herramientas de captura utilizando el software GANDIA. Además de la implementación de cargue de bases de datos en Excel para su análisis operativo. Llevé a cabo la limpieza y organización de los datos en las bases de Excel.</p>
                     </div>
                 </div>
