--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ body {
 }
 
 section {
-    /* min-height: 100vh; */ /* Se modifico para que el footer no que */
+    /* min-height: 100vh; */ /* Se modifico para que el footer */
     min-height: 96.9vh;
     padding: 10rem 9% 2rem;
 }
