--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -44,16 +44,14 @@
         <div class="projec-column">
             <div class="card">
                 <div class="face front">
-                    <img src="../../../assets/Photo_Img.png" alt="Proeycto 1">
+                    <img src="../../../assets/Logotipo_Crud_Tareas.png" alt="Proeycto_1">
                     <h3>CRUD</h3>
                 </div>
                 <div class="face back">
                     <h3>CRUD</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
-                        et
-                        dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
+                    <p>Es una aplicación web que permite crear, leer, actualizar, eliminar y buscar datos de una base de datos en tiempo real, utilizando Angular 15 como framework de frontend y Firebase como plataforma de backend y alojamiento, con un despliegue seguro, ademas que se puede descargar la información en un excel para una gestión eficiente de información.</p>
                     <div class="link">
-                        <a href="#">Proyecto</a>
+                        <a href="https://crud-tareas-fb995.web.app/listTareas" target="_blank">Ver Proyecto</a>
                     </div>
                 </div>
             </div>
