cambio en el texto

--- a/src/app/components/about-perfil/about-perfil.component.html
+++ b/src/app/components/about-perfil/about-perfil.component.html
@@ -16,7 +16,7 @@
         <div class="aboutPerfil-info">
             <h1>Developer Web</h1>
             <h3>Profecional Front-end Web</h3>
-            <p>Egresado del SENA, soy un profesional apasionado y comprometido con la convergencia de diseño y tecnología. Mi experiencia como Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, junto con un año y medio de experiencia en desarrollo Frontend, me han proporcionado una base sólida para abordar proyectos de manera integral. Mi enfoque en el trabajo en equipo, la adaptabilidad y la resolución de problemas me permite enfrentar desafíos con confianza y entregar resultados de alta calidad en cada paso del camino.</p>
+            <p>Egresado del SENA, soy un profesional apasionado y comprometido con la convergencia de diseño y tecnología. Mi experiencia como Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, junto con dos años de experiencia en desarrollo Frontend, me han proporcionado una base sólida para abordar proyectos de manera integral. Mi enfoque en el trabajo en equipo, la adaptabilidad y la resolución de problemas me permite enfrentar desafíos con confianza y entregar resultados de alta calidad en cada paso del camino.</p>
             <div class="aboutPerfil-idioma">
                 <h3>Idioma: <span>Ingles-B1</span> </h3>
             </div> 
