Update_Home_About

--- a/src/app/components/about-perfil/about-perfil.component.html
+++ b/src/app/components/about-perfil/about-perfil.component.html
@@ -3,10 +3,10 @@
         <a routerLink="../about"><i class='bx bx-arrow-back'></i></a>
         <h2 class="heading">Sobre <span>Mi</span></h2>
     </div>
-    
+
 
     <div class="aboutPerfil-contents">
-        
+
         <!-- Seccion de la Foto personal -->
         <div class="aboutPerfil-img">
             <img src="../../../assets/Cyberpunk_foto.jpg" alt="foto_perfil">
@@ -15,63 +15,63 @@
         <!-- Container General -->
         <div class="aboutPerfil-info">
             <h1>Developer Web</h1>
-            <h3>Profecional Front-end Web</h3>
-            <p>Egresado del SENA, soy un profesional apasionado y comprometido con la convergencia de diseño y tecnología. Mi experiencia como Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, junto con dos años de experiencia en desarrollo Frontend, me han proporcionado una base sólida para abordar proyectos de manera integral. Mi enfoque en el trabajo en equipo, la adaptabilidad y la resolución de problemas me permite enfrentar desafíos con confianza y entregar resultados de alta calidad en cada paso del camino.</p>
+            <h3>Profecional en Desarrollo Web</h3>
+            <p>Con experiencia en desarrollo web, soy un profesional comprometido, con enfoque en el diseño y la tecnología. Mi experiencia como Tecnólogo en Análisis de Sistemas de Información y Diseñador Gráfico, junto con 26 meses de experiencia como desarrollador Full Stack, me han proporcionado una base sólida para abordar proyectos de manera integral. Mi enfoque se centra en el trabajo en equipo, la adaptabilidad y la resolución de problemas, lo que me permite enfrentar desafíos con confianza y entregar resultados de alta calidad en cada proyecto.</p>
             <div class="aboutPerfil-idioma">
-                <h3>Idioma: <span>Ingles-B1</span> </h3>
-            </div> 
+                <h3>Idioma: <span>Ingles - B1</span> </h3>
+            </div>
 
             <!-- Seccion pequeña de idiomas  -->
             <div class="aboutPerfil-personal">
                 <div><span><span class="title">Diplomado: </span> Scrum Master</span> </div>
                 <div><span><span class="title">Diplomado: </span> Ofimatica Avanzada</span> </div>
-                <div><span><span class="title">Diplomado: </span> Software Siigo</span> </div>
-                <div><span><span class="title">Diplomado: </span> Ilustración de Personajes</span> </div>
+                <div><span><span class="title">Diplomado: </span> Full Stack Developer</span> </div>
+                <div><span><span class="title">Diplomado: </span> Programación Software</span> </div>
             </div>
 
             <!-- Seccion de habilidades -->
             <div class="aboutPerfil-contenedorSkill">
                 <h1>Mis habilidades Blandas</h1>
-    
+
                 <div class="skills">
                     <div class="text-progress">
                         <h3>Trabajo en Equipo</h3>
-                    </div>    
+                    </div>
                     <div class="linea-progress">
                         <div id="habilidad_1"></div>
                     </div>
                 </div>
-    
+
                 <div class="skills">
                     <div class="text-progress">
-                        <h3>Resilencia</h3>
-                    </div>    
+                        <h3>Responsabilidad</h3>
+                    </div>
                     <div class="linea-progress">
                         <div id="habilidad_2"></div>
                     </div>
                 </div>
-    
+
                 <div class="skills">
                     <div class="text-progress">
                         <h3>Adaptabilidad</h3>
-                    </div>    
+                    </div>
                     <div class="linea-progress">
                         <div id="habilidad_3"></div>
                     </div>
                 </div>
-    
+
                 <div class="skills">
                     <div class="text-progress">
                         <h3>Liderazgo</h3>
-                    </div>    
+                    </div>
                     <div class="linea-progress">
                         <div id="habilidad_4"></div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
-    </div>   
+    </div>
 
-    
+
 </section>
