--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,7 +5,7 @@
         <span class="circle-spin"></span>
     </div>
     <div class="about-content">
-        <h3>Frontend Developer </h3>
+        <h3>Full Stack Developer </h3>
         <p>Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, con un toque de creatividad y un año de experiencia en desarrollo Frontend. Mi mundo gira en torno al diseño web y al desarrollo, donde combino lo visual con lo técnico para conectar con las necesidades de mis clientes y usuarios. </p>
 
         <div class="btn-box btns">
