--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,16 +2,15 @@
     <div class="home-content">
         <h1>Hola soy Alejandro Ramirez <span class="animate" style="--i:2;"></span></h1>
         <div class="text-animate">
-            <h3>Frontend Developer</h3>
+            <h3>Desarrollador Web</h3>
             <span class="animate" style="--i:3;"></span>
         </div>
 
-        <p>¡Bienvenidos a mi portafolio! Soy un apasionado desarrollador Frontend y diseñador gráfico, estoy encantado de compartir con ustedes mi trabajo y mi creatividad. A lo largo de mi trayectoria profesional, he adquirido habilidades en la creación de interfaces atractivas y funcionales, combinando una sólida experiencia en desarrollo web con un ojo artístico para el diseño gráfico. Brindando una experiencia al usuario en cada proyecto en el que trabajo.</p>
+        <p class="home-text">¡Bienvenidos a mi portafolio! Soy un apasionado desarrollador full stack y diseñador gráfico, estoy encantado de compartir con ustedes mi trabajo y mi creatividad. A lo largo de mi trayectoria profesional, he adquirido habilidades en la creación de interfaces atractivas y funcionales, combinando una sólida experiencia en desarrollo web con un ojo artístico para el diseño gráfico. Brindando una experiencia al usuario en cada proyecto en el que trabajo.</p>
         <span class="animate" style="--i:4;"></span>
         <div class="btn-box">
-            <!-- <a href="archivo.jpg" download="Nombre-del-archivo ruta"></a>  para descargar el archivo-->
-            <a href="#" class="btn">Hoja de Vida</a>
-            <!-- <a href="#" class="btn">Juegos</a> -->
+            <!-- para descargar el archivo -->
+            <a href="./assets/Alejandro_Curriculum.pdf" class="btn" download="Alejandro_Curriculum">Hoja de Vida</a>
             <span class="animate" style="--i:5;"></span>
         </div>
     </div>
