--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,6 +10,10 @@
     z-index: 99;
 }
 
+.home-text {
+  text-align: justify;
+}
+
 .home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
@@ -17,7 +21,7 @@
 
     //Para el redload
     position: relative;
-    display: inline-block;  
+    display: inline-block;
 }
 
 .home-content .text-animate {
@@ -56,7 +60,7 @@
     border-right: 2px solid var(--main-color);
     z-index: -1;
 
-    //Animacion 
+    //Animacion
     animation: homeCursorText 5s linear infinite;
     -webkit-animation: homeCursorText 5s linear infinite;
     animation-delay: 1s;
@@ -147,7 +151,7 @@
 
 .home-imgHover:hover {
     /*opacity: .4;*/
-    
+
     filter: grayscale(80%);
     -webkit-filter: grayscale(80%);
 }
@@ -178,7 +182,7 @@
 //*****************BreakPoints**************************//
 
 @media (max-width: 1030px) {
-    
+
     .home-imgHover {
         pointer-events: none;
         opacity: .10;
@@ -186,7 +190,7 @@
 }
 
 @media (max-width: 768px) {
-    
+
     .home-imgHover {
         pointer-events: none;
         opacity: .10;
@@ -194,7 +198,7 @@
 }
 
 @media (max-width: 520px) {
-    
+
     .home-content h1 {
         display: flex;
         flex-direction: column;
@@ -230,8 +234,8 @@
 
     0%, 10%, 100% {
         background-position: -33rem 0;
-    } 
-    
+    }
+
     65%, 85% {
         background-position: 0 0;
     }
@@ -241,8 +245,8 @@
 
     0%, 10%, 100% {
         width: 0;
-    } 
-    
+    }
+
     65%, 78%, 85% {
         width: 100%;
         opacity: 1;
